feat: update server, lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,7 @@
   },
   "parser": "@typescript-eslint/parser", // Allows Eslint to understand TypeScript syntax.
   "parserOptions": {
-    "project": "./tsconfig.json", // Specify where to find the root tsconfig file of your project.
+    //"project": "./tsconfig.json", // Specify where to find the root tsconfig file of your project.
     "ecmaVersion": 2021, // ECMAScript version supported in the project.
     "sourceType": "module", // set to `module` because we ue ECMAScript modules.
     "ecmaFeatures": {
@@ -77,6 +77,13 @@
     }
   },
   "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/parser": "off"
+      }
+    },
     {
       "files": [
         "**/__tests__/**/*.[jt]s?(x)",
