--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "lib": ["dom", "dom.iterable", "esnext", "scripthost"],
-    "allowJs": false,
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -24,5 +24,5 @@
       "contexts/*": ["src/contexts/*"]
     }
   },
-  "include": ["jest.setup.ts", "src/**/*", "src/**/*.tsx"]
+  "include": ["vite.config.ts", "jest.setup.ts", "src/**/*.ts", "src/**/*.tsx"],
 }
