--- a/package.json
+++ b/package.json
@@ -55,6 +55,12 @@
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
+    "stylelint": "^14.8.5",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
     "ts-jest": "^28.0.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
