--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "jest --watchAll",
     "test:unit:coverage": "jest --silent --watchAll=false --coverage",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "prepare": "husky install",
     "preview": "vite preview"
   },
   "lint-staged": {
