--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^5.5.1",
+    "i18next": "^21.8.5",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-sonar": "^0.2.12",
     "postcss": "^8.4.5",
     "postcss-import": "^14.1.0",
     "prettier": "^2.6.2",
+    "react-i18next": "^11.16.9",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
     "stylelint": "^14.8.5",
