--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "*.{css,md,json}": [
       "prettier --write"
     ],
-    "*.ts?(x)": [
+    "*.{js, jsx, ts, tsx}": [
+      "eslint src --ext .js,.jsx,.ts,.tsx"
+    ],
+    "*.tsx": [
       "eslint",
-      "stylelint:tsx",
-      "prettier --write"
+      "yarn stylelint --ignore-path .gitignore **/*.tsx"
     ],
     "*.scss": [
-      "stylelint:scss"
+      "yarn stylelint --ignore-path .gitignore **/*.scss"
     ],
     "package.json": "npx sort-package-json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/node": "^17.0.22",
     "@virnect/logger": "^1.0.2",
     "axios": "^0.27.0",
@@ -37,7 +40,8 @@
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.2",
